--- a/index.html
+++ b/index.html
@@ -123,44 +123,49 @@
 <body>
 
   <div class="container">
-    <h1>My Dearest ❤️</h1>
-    <h2>Happy Valentine’s Day, My Love</h2>
+    <h1>A 💖 S</h1>
+    <!-- <h2>Promise Day — From Ankit to Sakshi</h2> -->
 
-    <div class="heart">💖</div>
-
-    <p>
-      From the moment you came into my life, everything became brighter,
-      warmer, and more meaningful. You are my smile on tough days,
-      my calm in chaos, and my biggest blessing.
-    </p>
+    <div class="heart">💞</div>
 
     <p>
-      Every laugh we share, every dream we build,
-      and every memory we create reminds me
-      how lucky I am to have you by my side.
+      <br /><br />
+      From the moment you came into my life, everything changed for the better.
+      You became my happiness, my strength, and my safest place.
     </p>
+
+    <!-- <p>
+      Today, on Promise Day, I want you to know that
+      my heart belongs to you — now and forever.
+      Every dream I see has you in it.
+    </p> -->
 
     <p>
-      Thank you for loving me, supporting me,
-      and choosing me every single day.
+      I promise to respect you, support you,
+      and stand by you in every phase of life.
+      With you, love feels easy, pure, and complete.
     </p>
 
-    <button class="btn" onclick="showMessage()">Click for a Surprise 💌</button>
+    <button class="btn" onclick="showMessage()">Open My Promise 💌</button>
 
     <div class="hidden-message" id="secretMessage">
       <p>
-        My love,
+        My Love Sakshi,
         <br /><br />
-        I promise to stand by you in every season of life,
-        to respect you, cherish you, and grow with you.
-        You are my today, my tomorrow, and my forever.
+        I promise to love you on your best days,
+        and hold you closer on your worst.
+        I promise to listen, to understand,
+        and to grow with you every day.
         <br /><br />
-        Will you always be mine? 💍❤️
+        You are my forever, A 💖 S.
+        <br /><br />
+        <br />
+        Ankit ❤️
       </p>
     </div>
 
     <div class="footer">
-      Made with endless love, just for you 💕
+      Made with love by Ankit, for Sakshi 💕
     </div>
   </div>
 
